<resources>
    <string name="app_name">My Application1</string>
    <string name="action_settings">Settings</string>
    <string name="signIn">登录</string>
    <string name="register">注册</string>
    <string name="student">学生</string>
    <string name="teacher">教师</string>
    <string name="corporation">社团</string>
    <string name="manager">管理者</string>
    <string name="sysu">中山大学课外体育积分电子认证系统</string>
    <string name="username1">用户名:</string>
    <string name="username2">请输入用户名</string>
    <string name="password1">密码:</string>
    <string name="password2">请输入密码</string>
</resources>
